First working prototype.

--- a/templates/biographicaldata.html
+++ b/templates/biographicaldata.html
@@ -71,7 +71,7 @@
 </ul>
 </fieldset>  
   
-<input type="hidden" name="assignmentId" value="{{ request.args.get('assignmentId') }}">
+<input type="hidden" name="workerId" value="{{ request.args.get('workerId') }}">
 
 <input type="submit" value="Continue" />
 </form>
