--- a/static/style.css
+++ b/static/style.css
@@ -15,11 +15,17 @@
 
 div.movie-map {
 	position: relative;
+	width: 1200px;
+	height: 802px;
+	overflow: hidden;
+	border-left: solid 1px #8a97a0;;
 }
 
 div.movie-map img {
-	width: 800px;
-	height: 533px;
+	height: 800px;
+	width: 1200px;
+	margin-left: -110px;
+	margin-right: -300px;
 	border: solid 1px #8a97a0;;
 }
 
@@ -29,8 +35,8 @@ div.movie-map .circle {
 	height: 20px;
 	background-color: rgba(255, 0, 0, 0.8);
 	position: absolute;
-	top: 256px;
-	left: 390px;
+	top: 380px;
+	left: 490px;
 	border: solid 1px #000;
 	/* width and height can be anything, as long as they're equal */
 }
