--- a/templates/consent.html
+++ b/templates/consent.html
@@ -29,6 +29,7 @@
 <li>Bret Jackson (bjackson@macalester.edu)</li>
 <li>Brent Hecht (bhecht@cs.umn.edu)</li>
 </ul>
+Please contact Shilad Sen (ssen@macalester.edu) with any questions or feedback.
 
 <h2>Are there any risks to me?</h2>
 <p>There are no significant risks associated with this survey. We do not collect any identifying personal information except for your Amazon Worker ID.</p>
@@ -51,7 +52,7 @@ If you have any questions about the research, you should contact the Principle I
 </fieldset>
 <p>(You must enter your Mechanical Turk Worker ID in order for us to pay you.)</p>
 
-<input type="hidden" name="assignmentId" value="{{ request.args.get('assignmentId') }}">
+<input type="hidden" name="workerId" value="{{ request.args.get('workerId') }}">
 
 <input type="submit" value="Get Started!" />
 </form>
