--- a/templates/map.html
+++ b/templates/map.html
@@ -16,38 +16,50 @@
 <body>
 <div class="cartograph">
 
-<h1>Movie Relationship Survey</h1>
+<h1>Movie Relationship Survey: Map {{  questionNum +1 }} of {{ totalMaps }}</h1>
 
 <p>The image below shows a map where the city dots represent movies. Movies that are similar or closely related are shown closer together on the map.</p>
 
-<img src="tmpimg.png" />
+<div class="movie-map">
+    <img src="{{ url_for('static', filename='images/maps/' + map) }}" />
+    <div class="circle">&nbsp;</div>
+</div>
 
-<h2>Choose your top three choices for which movie the selected dot should represent.</h2>
+<h2>Choose your top three choices for which movie the red dot should represent.</h2>
 
-<form id="answerForm">
+<form id="answerForm" action="../save/{{ (questionNum) }}">
 <fieldset>
-<label for="firstchoice">First Choice:</label>
-<select id="firstchoice" name="firstChoice">
+<label for="firstchoice">Top Choice:</label>
+<select id="firstchoice" name="firstchoice">
   <option value="none">Choose...</option>
-  <option value="The Rock">The Rock</option>
-  <option value="Die Hard">Die Hard</option>
+{% for m in options %}
+  <option value="{{ m }}">{{ m }}</option>
+{% endfor %}
 </select>
 
 <label for="secondchoice">Second Choice:</label>
 <select id="secondchoice" name="secondchoice">
   <option value="none">Choose...</option>
-  <option value="The Rock">The Rock</option>
-  <option value="Die Hard">Die Hard</option>
+{% for m in options %}
+  <option value="{{ m }}">{{ m }}</option>
+{% endfor %}
 </select>
 
 <label for="thirdchoice">Third Choice:</label>
 <select id="thirdchoice" name="thirdchoice">
   <option value="none">Choose...</option>
-  <option value="The Rock">The Rock</option>
-  <option value="Die Hard">Die Hard</option>
+{% for m in options %}
+  <option value="{{ m }}">{{ m }}</option>
+{% endfor %}
 </select>
 </fieldset>
-  
+
+<input type="hidden" name="workerId" value="{{ request.args.get('workerId') }}">
+
+{% for m in request.args.getlist('seenMovies') %}
+<input type="hidden" name="seenMovies" value="{{ m }}">
+{% endfor %}
+
 <input type="submit" value="Continue" />
 </form>
 <script>
