--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -35,7 +35,7 @@
 
 </p>
 <p>
-    For example, for the map above presume you wiere given the following choices: <it>Hannibal</it>, <it>Bambi</it>, and <it>Mary Poppins</it>.
+    For example, for the map above presume you were given the following choices: <it>Hannibal</it>, <it>Bambi</it>, and <it>Mary Poppins</it>.
     You would select <b>Hannibal</b> because it is a sequel to <it>Silence of the Lambs</it>, which is near the center of the map.
     We will ask you for your best guess about the mystery movie.</p>
 
